--- a/main.html
+++ b/main.html
@@ -7,6 +7,17 @@
 
   <body>
     <!-- write the body here -->
+	  <div class="container">
+        <form id="ageForm">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required>
+
+            <label for="age">Age:</label>
+            <input type="number" id="age" name="age" required>
+
+            <button id="btn" type="submit">Submit</button>
+        </form>
+    </div>
 
     <script type="text/javascript" src="./script.js"></script>
   </body>
